# Gmail-AI-helper

./: .gitignore  README.md  pyproject.toml
src/mail/: __init__.py  auth.py  categorize_emails.py  fetch_emails.py  server.py  test.py
